funciona session factory sense js separat

--- a/app/public/modul1/index.html
+++ b/app/public/modul1/index.html
@@ -11,7 +11,7 @@
     <script src="./../javascripts/angular/angular_1.5.3.js"></script>
     <script src="./mod_1.js"></script>
     <script src="./sessionService.js"></script>
-    <script src="./sessionFactory.js"></script>
+    <!--<script src="./sessionFactory.js"></script>-->
     <script src="./sessionController.js"></script>
 
     <script type="text/JavaScript">
